--- a/assets/css/market-place.css
+++ b/assets/css/market-place.css
@@ -932,7 +932,7 @@ body.modal-open{overflow:hidden;}
   opacity:0;
   pointer-events:none;
   transition:opacity .25s ease;
-  z-index:30;
+  z-index:100000;
 }
 .add-product-modal.is-open{
   opacity:1;
@@ -1177,7 +1177,7 @@ body.modal-open{overflow:hidden;}
   opacity:0;
   pointer-events:none;
   transition:opacity .25s ease;
-  z-index:40;
+  z-index:100001;
 }
 .delete-confirm-modal.is-open{
   opacity:1;
